<resources>
    <string name="app_name">PuertoMorelosApp</string>

    <!--Login-->
    <string name="login_facebook_button">Entrar con Facebook</string>
    <string name="login_registrarse_button">Registrarse</string>
    <string name="login_login_button">Entrar</string>
    <string name="login_email_edittext">E-mail</string>
    <string name="login_pass_edittext">Password</string>
    <string name="login_loading">Iniciando Sesión...</string>
    <string name="login_anonymous">Registrarme mas tarde.</string>

    <!--Registro-->
    <string name="registro_mensaje">¿Ya estás registrado?</string>
    <string name="registro_terminos">Al registrarte estas aceptando nuestros</string>
    <string name="registro_terminos_link">términos y condiciones</string>
    <string name="registro_terminos_app">de esta aplicación.</string>
    <string name="registro_hint_username">Username</string>
    <string name="registro_hint_email">E-mail</string>
    <string name="registro_hint_passwprd">Password</string>

    <!--Menu-->
    <string name="menu_main">Menu Principal</string>
    <string name="menu_myactivity">Mi Actividad</string>
    <string name="menu_about">Acerca De</string>
    <string name="menu_conditions">Términos y Condiciones</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="menu_close_session_accept">Aceptar</string>
    <string name="menu_close_session_cancel">Cancel</string>
    <string name="menu_close_session_message">¿Estás seguro que deseas cerrar la sesión?</string>

    <!--About Us -->
    <string name="aboutus_face">Facebook</string>
    <string name="aboutus_twitter">Twitter</string>
    <string name="aboutus_insta">Instagram</string>
    <string name="aboutus_contact">Contacto</string>

    <!--Utils-->
    <string name="email_empty">El campo E-mail es requerido.Favor de completarlo e intentarlo nuevamente</string>
    <string name="password_empty">El campo Password es requerido.Favor de completarlo e intentarlo nuevamente</string>
    <string name="user_empty">El campo Usuario es requerido.Favor de completarlo e intentarlo nuevamente</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_accept">Aceptar</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="title_register">Registrarse</string>
    <string name="title_login">Iniciar Sesión</string>
    <string name="title_recover">Recuperar</string>
    <string name="facebook_app_id">975356942502889</string>
    <string name="fb_login_protocol_scheme">fb975356942502889</string>

    <!--Descubre-->
    <string name="descubre_title">Descubre</string>

    <!--Details-->
    <string name="detail_like">Me gusta</string>
    <string name="detail_comment">Comentarios</string>
    <string name="detail_photos">Fotos</string>
    <string name="detail_ubicacion">Ubicación</string>
    <string name="detail_description">Descripción</string>
    <string name="detail_service_title">Servicios</string>
    <string name="detail_phone_hint">Tel:</string>


    <!--Categorias-->
    <string name="historia">Historia</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="hoteles">Hoteles</string>
    <string name="atractivos_turisticos">Atractivos Turisticos</string>
    <string name="comida_rapida">Comida rapida</string>
    <string name="servicios">Servicios</string>
    <string name="eventos">Eventos</string>
    <string name="lugares_de_interes">Lugares de interes</string>
    <string name="comercios">Comercios</string>
    <string name="transition_subcategory">transicionsubcategoria</string>

    <!--Photos-->
    <string name="photos_gallery_title">Galeria</string>
    <string name="photos_gallery_selfies">Selfies</string>
    <string name="newphoto_cancel">Cancelar</string>
    <string name="newphoto_publicar">Publicar</string>
    <string name="newphoto_text_hint">¿Que ha pasado?</string>
    <string name="newselfie_loading">Subiendo Selfie...</string>

    <!--Activities-->

    <string name="likes_delete">No me gusta</string>
    <string name="comments_delete">Eliminar</string>
    <string name="comments_edit">Editar</string>

    <string name="tutorial_delete_title">¿Te faltó decir algo la última vez?</string>
    <string name="tutorial_delete_subtitle">Desliza hacia la izquierda y edita o borra los comentarios del historial. O para quitar tu me gusta de algún lugar.</string>

    <string name="tutorial_selfie_title">¿Esa selfie ya no te gusta tanto?</string>
    <string name="tutorial_selfie_title_emoticon">¿Esa selfie ya no te gusta tanto?😞</string>
    <string name="tutorial_selfie_subtitle">Búscala en el album, seleccionala y presiona la papeleria.</string>

    <!--Comments-->

    <string name="comments_title">Comentarios</string>
    <string name="comments_writecomment">Escribe un comentario</string>
    <string name="comments_today">Hoy </string>
    <string name="comments_yesterday">Ayer </string>

    <!--Tabs-->
    <string name="tab_likes">Me gusta</string>
    <string name="tab_comments">Comentarios</string>
    <string name="tab_selfies">Selfies</string>

    <!--Anonymous-->
    <string name="anonymous_message_selfie">Para subir tus selfies necesitas registrarte</string>
    <string name="anonymous_message_info">Para ver la informacion del usuario necesitas registrarte</string>
    <string name="anonymous_message_like_comment">Para comentar, dar like, y subir fotos necesitas registrarte</string>
    <string name="anonymous_title">Oops!. No estas registrado</string>
    <string name="anonymous_resgiter">Registrarme</string>
    <string name="anonymous_late">Más tarde</string>


</resources>

