<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivBackRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitleRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_margin_slides"
                android:layout_marginRight="@dimen/login_margin_slides"
                android:layout_marginTop="@dimen/login_margin_slides"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTitleRegister"
                android:layout_marginLeft="@dimen/login_margin_slides"
                android:layout_marginRight="@dimen/login_margin_slides"
                android:layout_marginTop="@dimen/login_margin_slides"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/etUsernameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_edittext"
                    android:drawablePadding="5dp"
                    android:hint="@string/registro_hint_username"
                    android:minHeight="50dp"
                    android:paddingLeft="5dp"
                    android:textColor="@android:color/darker_gray"
                    android:textColorHint="@android:color/darker_gray"
                    android:textCursorDrawable="@drawable/cursor_editext" />


                <EditText
                    android:id="@+id/etEmailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_edittext"
                    android:drawablePadding="5dp"
                    android:hint="@string/login_email_edittext"
                    android:inputType="textEmailAddress"
                    android:minHeight="50dp"
                    android:paddingLeft="5dp"
                    android:textColor="@android:color/darker_gray"
                    android:textColorHint="@android:color/darker_gray"
                    android:textCursorDrawable="@drawable/cursor_editext" />

                <EditText
                    android:id="@+id/etPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_edittext"
                    android:drawablePadding="5dp"
                    android:hint="@string/registro_hint_passwprd"
                    android:inputType="textPassword"
                    android:minHeight="50dp"
                    android:paddingLeft="5dp"
                    android:textColor="@android:color/darker_gray"
                    android:textColorHint="@android:color/darker_gray"
                    android:textCursorDrawable="@drawable/cursor_editext" />

                <Button
                    android:id="@+id/btRegisterRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_margin_slides"
                    android:background="@drawable/blue_button"
                    android:text="@string/login_registrarse_button"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvRegisterDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_margin_slides"
                    android:gravity="center"
                    android:text="@string/registro_mensaje"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />


            </LinearLayout>


        </RelativeLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tvTermsandConditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="@dimen/login_margin_slides"
        android:layout_marginRight="@dimen/login_margin_slides"
        android:gravity="center"
        android:text="@string/registro_terminos"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorAccent" />

    <ProgressBar
        android:id="@+id/pbRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />


</RelativeLayout>