<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivBackRecovery"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitleRecovery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:id="@+id/llLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTitleLogin"
                android:layout_marginLeft="@dimen/login_margin_slides"
                android:layout_marginRight="@dimen/login_margin_slides"
                android:layout_marginTop="@dimen/login_margin_mainlogin_top"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/etRecoveryMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_edittext"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:drawablePadding="5dp"
                    android:drawableTint="@android:color/darker_gray"
                    android:hint="@string/login_email_edittext"
                    android:inputType="textEmailAddress"
                    android:minHeight="50dp"
                    android:paddingLeft="5dp"
                    android:textColor="@android:color/darker_gray"
                    android:textColorHint="@android:color/darker_gray"
                    android:textCursorDrawable="@drawable/cursor_editext" />

                <Button
                    android:id="@+id/btSenMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/blue_button"
                    android:elevation="4dp"
                    android:text="@string/login_login_button"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llLogin"
                android:layout_marginLeft="@dimen/login_margin_slides"
                android:layout_marginRight="@dimen/login_margin_slides"
                android:layout_marginTop="@dimen/login_margin_secundarylogin_top"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btRecoveryLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/transparent_button"
                    android:text="@string/login_facebook_button"
                    android:textColor="@color/colorAccent" />

                <Button
                    android:id="@+id/btRecoveryRegistrer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/transparent_button"
                    android:text="@string/login_registrarse_button"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/pbRecovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />


</RelativeLayout>