<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/btNewPhotoCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:text="@string/newphoto_cancel"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btNewPhotoPublish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp"
            android:background="@null"
            android:text="@string/newphoto_publicar"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivNewPhotoProfilePicture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@drawable/avatar_deafult" />

        <TextView
            android:id="@+id/tvNewPhotoUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ivNewPhotoProfilePicture"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/ivNewPhotoProfilePicture"
            android:gravity="center"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tvNewPhotoCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="90"
            android:inputType="number"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </RelativeLayout>

    <EditText
        android:id="@+id/etNewPhotoComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@null"
        android:hint="@string/newphoto_text_hint"
        android:maxLength="89"
        android:maxLines="2"
        android:textColorHint="@android:color/darker_gray" />

    <ImageView
        android:id="@+id/ivNewPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:minHeight="250dp" />


</LinearLayout>